--- a/src/App.scss
+++ b/src/App.scss
@@ -1,6 +1,9 @@
 body {
     margin: 0;
-    font-family: 'Ubuntu', sans-serif;
+}
+
+.v-application {
+    font-family: 'Ubuntu', sans-serif !important;
 }
 
 :root {
