Finish the home page

--- a/src/views/Home/Home.scss
+++ b/src/views/Home/Home.scss
@@ -7,6 +7,7 @@
     background-color: $bg-1;
     text-align: center;
     padding-bottom: 10vh;
+    position: relative;
 
     .name {
         font-size: 3em;
@@ -30,5 +31,27 @@
         margin-top: 10px;
         font-size: 1.5em;
         color: $txt-3
+    }
+
+    .arrow {
+        position: absolute;
+        bottom: 100px;
+        width: 20%;
+        height: 10%;
+        left: 40%;
+        color: $txt-1;
+        text-decoration: none;
+        // right: 50%;
+
+        i {
+            font-size: 7em;
+            color: inherit;
+            opacity: 0.2;
+
+            &:hover {
+                opacity: 1;
+                transform: translateY(10px) scale(1.1);
+            }
+        }
     }
 }
