--- a/src/App.scss
+++ b/src/App.scss
@@ -1,5 +1,5 @@
-body {
-    margin: 0;
+html {
+    scroll-behavior: smooth;
 }
 
 .v-application {
@@ -14,4 +14,8 @@ body {
     @media (max-width: 700px) {
         font-size: 2.5vw;
     }
+
+    // ::-webkit-scrollbar {
+    //     display: none;
+    // }
 }
