Prepare to deploy

--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -1,7 +1,12 @@
 $bg-1: #1C2833;
 $bg-2: #324557;
+$bg-3: #18212b;
 
-$fg-1: #18212b;
+$fg-1: #768aa0;
+$fg-2: #808a94;
+$fg-3: #9faab6;
+$fg-4: #bbc7d6;
+$fg-5: #e4e9f0;
 
 $txt-1: #ABB2B9;
 $txt-2: #5D6D7E;
